log
Mon 25 Mar 2024 09:50:20 PM UTC: 
 tests:  0|6
total_score: 0/70
2ff5871
Mon 25 Mar 2024 10:24:54 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   list->size = 0;
      |       ^~
Compilation failed
eeb0b88
Mon 25 Mar 2024 10:27:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:6: error: expected identifier or ‘(’ before ‘->’ token
   35 |   int->size = 0;
      |      ^~
Compilation failed
072aa6e
Mon 25 Mar 2024 10:27:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: unused variable ‘size’ [-Werror=unused-variable]
   35 |   int size = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
98a78b8
Mon 25 Mar 2024 10:28:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9f4df21
Mon 25 Mar 2024 10:35:17 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6ddab95
Mon 25 Mar 2024 10:35:40 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b32ab61
Mon 25 Mar 2024 10:36:13 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a4a42b
Mon 25 Mar 2024 10:37:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
63b85de
Wed 27 Mar 2024 01:02:56 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
36ccee3
Wed 27 Mar 2024 01:03:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:84:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   84 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:75:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   75 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:62:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   62 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e22c579
Wed 27 Mar 2024 01:03:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ec04612
